-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 13
-
Component/s: hotspot
-
b10
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8264459 | 11.0.12-oracle | Dukebot | P4 | Resolved | Fixed | b01 |
| JDK-8224209 | 11.0.4 | Aleksey Shipilev | P4 | Resolved | Fixed | b04 |
x86-minimal:
Compiling 3028 files for java.base
/home/buildbot/worker/jdkX-linux/build/build/linux-x86_64-minimal-release/hotspot/variant-minimal/libjvm/objs/os_linux.o: In function `os::abort(bool, void*, void const*)':
/home/buildbot/worker/jdkX-linux/build/src/hotspot/os/linux/os_linux.cpp:1363: undefined reference to `ClassLoader::close_jrt_image()'
collect2: error: ld returned 1 exit status
lib/CompileGtest.gmk:58: recipe for target '/home/buildbot/worker/jdkX-linux/build/build/linux-x86_64-minimal-release/hotspot/variant-minimal/libjvm/gtest/libjvm.so' failed
make[3]: *** [/home/buildbot/worker/jdkX-linux/build/build/linux-x86_64-minimal-release/hotspot/variant-minimal/libjvm/gtest/libjvm.so] Error 1
make[2]: *** [hotspot-minimal-libs] Error 2
make[2]: *** Waiting for unfinished jobs....
Compiling 3028 files for java.base
/home/buildbot/worker/jdkX-linux/build/build/linux-x86_64-minimal-release/hotspot/variant-minimal/libjvm/objs/os_linux.o: In function `os::abort(bool, void*, void const*)':
/home/buildbot/worker/jdkX-linux/build/src/hotspot/os/linux/os_linux.cpp:1363: undefined reference to `ClassLoader::close_jrt_image()'
collect2: error: ld returned 1 exit status
lib/CompileGtest.gmk:58: recipe for target '/home/buildbot/worker/jdkX-linux/build/build/linux-x86_64-minimal-release/hotspot/variant-minimal/libjvm/gtest/libjvm.so' failed
make[3]: *** [/home/buildbot/worker/jdkX-linux/build/build/linux-x86_64-minimal-release/hotspot/variant-minimal/libjvm/gtest/libjvm.so] Error 1
make[2]: *** [hotspot-minimal-libs] Error 2
make[2]: *** Waiting for unfinished jobs....
- backported by
-
JDK-8224209 Minimal VM build failure after JDK-8219414
-
- Resolved
-
-
JDK-8264459 Minimal VM build failure after JDK-8219414
-
- Resolved
-
- relates to
-
JDK-8219414 SA: jhsdb jsnap throws UnmappedAddressException with core generated by gcore
-
- Resolved
-