8219574: Minimal VM build failure after JDK-8219414

Reviewed-by: jgeorge, dholmes, cjplummer